# research-os

./: .gitignore  AGENTS.md  PROJECT_MEMORY.md  README.md  SESSION_HANDOFF.md  TODOS.md  pyproject.toml
docs/superpowers/plans/: 2026-05-23-research-os-first-working-slice.md  2026-05-24-research-os-home-index.md  2026-05-24-zotero-collection-ingest.md  2026-05-25-research-os-visual-explorer.md
docs/superpowers/specs/: 2026-05-22-research-os-workspace-template-design.md  2026-05-25-research-os-visual-explorer-design.md
examples/demo-research-workspace/: AGENTS.md  GETTING_STARTED.md  README.md  research-os.yaml
examples/demo-research-workspace/graph/: graph.json
examples/demo-research-workspace/registries/: projects.yaml  sources.yaml
examples/demo-research-workspace/schemas/: graph.schema.yaml
examples/demo-research-workspace/visual/: index.html
examples/demo-research-workspace/workflows/: deep-process-paper.md  ingest-paper.md  lint-knowledge-base.md  (+4 more)
src/research_os/: __init__.py  cli.py  config.py  context.py  graph.py  index.py  ingest.py  integrate.py  paths.py  projects.py  scan.py  staleness.py  validation.py  visual.py  visual_template.html  wiki.py  zotero.py
tests/: test_auto_index.py  test_context.py  test_demo.py  test_graph_doctor.py  test_index.py  test_ingest_zotero.py  test_init.py  test_integrate_source.py  test_projects.py  test_staleness.py  test_status_validate.py  test_visual.py
visual-app/: README.md  index.html  package-lock.json  package.json
visual-app/scripts/: inline-template.mjs
visual-app/src/: main.jsx  styles.css
(+45 files in other folders)
